@@ -24,6 +24,8 @@ Version 7.1  [ 25 September, 2022 ]
     ENGINE:
         Class AbelianGroup:
             - New tightDecoding() routines.
+        Class AngleStructures:
+            - New operator [], which is identical to calling structure().
         Class BanEdge:
             - New ban constraint for use with the tree traversal classes.
         Class CallableArg<...>:
@@ -114,6 +116,8 @@ Version 7.1  [ 25 September, 2022 ]
             - New routines isThinTriangleLink(), isThinTetrahedronLink(),
               isNormalEdgeLink(), isNormalTriangleLink() and
               isNormalTetrahedronLink().
+        Class NormalHypersurfaces:
+            - New operator [], which is identical to calling hypersurface().
         Class NormalSurface:
             - New operators * and *= for taking integer multiples.  The old
               doubleSurface() is now deprecated.
@@ -123,6 +127,8 @@ Version 7.1  [ 25 September, 2022 ]
             - New routine removeOcts().
             - Routine cutAlong() can now work with almost normal surfaces
               (i.e., it can now handle octagons).
+        Class NormalSurfaces:
+            - New operator [], which is identical to calling surface().
         Class Packet:
             - Renamed insertChildFirst(), insertChildLast() and
               insertChildAfter() to prepend(), append() and insert().
